--- a/src/scss/utils/_tokens.scss
+++ b/src/scss/utils/_tokens.scss
@@ -36,8 +36,8 @@ $spacing-xxl: 3rem;      // 48px
 // SIZING
 // -----------------------------------------------------------------------------
 // Element sizes for consistency
-$size-input-height: 2.5rem;     // Standard input height
-$size-button-height: 2.5rem;    // Standard button height
+$size-input-height: 3rem;       // Standard input height (updated from 2.5rem)
+$size-button-height: 3rem;      // Standard button height (updated from 2.5rem)
 $size-icon-sm: 1rem;            // Small icon (16px)
 $size-icon-md: 1.25rem;         // Medium icon (20px)
 $size-icon-lg: 1.5rem;          // Large icon (24px)
