--- a/src/scss/global/_global-overrides.scss
+++ b/src/scss/global/_global-overrides.scss
@@ -5,7 +5,7 @@
   // Firefox scrollbar styling
   scrollbar-width: thin;
   scrollbar-color: colors.$scrollbar-color colors.$scrollbar-bg;
-  
+
   // Chrome/Safari/Edge scrollbar styling
   &::-webkit-scrollbar {
     width: 6px;
@@ -13,76 +13,76 @@
     background-color: transparent;
     display: block;
   }
-  
+
   &::-webkit-scrollbar-thumb {
     background-color: colors.$scrollbar-color;
     border-radius: 10rem;
     border: none;
-    
+
     &:hover {
       background-color: colors.$input-focus;
     }
   }
-  
+
   &::-webkit-scrollbar-track {
     background-color: colors.$scrollbar-bg;
     border-radius: 10rem;
     margin: 0;
   }
-  
-  // Global Tab Styling
-  &.sheet-tabs, .tabs {
-    display: flex;
-    flex-wrap: wrap;
-    border-bottom: 1px solid colors.$c-faint;
-  }
-  
-  .sheet-tabs.tabs a[data-action="tab"] {
-    position: relative;
-    padding: 5px 10px;
-    border: 1px solid transparent;
-    border-bottom: none;
-    border-radius: 5px 5px 0 0;
-    font-weight: 500;
-    transition: all 0.2s ease;
-  }
-  
-  .sheet-tabs.tabs a[data-action="tab"].active {
-    position: relative;
-    background-color: transparent;
-    color: #fff;
-    border: none;
-    z-index: 1;
-    padding: 5px 15px;
-    
-    // Create parallelogram background
-    &::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background-color: colors.$tab-active-bg;
-      transform: skewX(-15deg);
-      transform-origin: bottom;
-      z-index: -1;
-    }
-  }
-  
-  .sheet-tabs.tabs a[data-action="tab"]:hover:not(.active) {
-    position: relative;
-    color: colors.$scrollbar-color;
-    border: none;
-    background-color: transparent;
-    
-    // Create parallelogram background for hover state
-    &::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background-color: rgba(colors.$scrollbar-color, 0.1);
-      transform: skewX(-15deg);
-      transform-origin: bottom;
-      z-index: -1;
-    }
-  }
+
+  // // Global Tab Styling
+  // &.sheet-tabs, .tabs {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   border-bottom: 1px solid colors.$c-faint;
+  // }
+
+  // .sheet-tabs.tabs a[data-action="tab"] {
+  //   position: relative;
+  //   padding: 5px 10px;
+  //   border: 1px solid transparent;
+  //   border-bottom: none;
+  //   border-radius: 5px 5px 0 0;
+  //   font-weight: 500;
+  //   transition: all 0.2s ease;
+  // }
+
+  // .sheet-tabs.tabs a[data-action="tab"].active {
+  //   position: relative;
+  //   background-color: transparent;
+  //   color: #fff;
+  //   border: none;
+  //   z-index: 1;
+  //   padding: 5px 15px;
+
+  //   // Create parallelogram background
+  //   &::before {
+  //     content: '';
+  //     position: absolute;
+  //     inset: 0;
+  //     background-color: colors.$tab-active-bg;
+  //     transform: skewX(-15deg);
+  //     transform-origin: bottom;
+  //     z-index: -1;
+  //   }
+  // }
+
+  // .sheet-tabs.tabs a[data-action="tab"]:hover:not(.active) {
+  //   position: relative;
+  //   color: colors.$scrollbar-color;
+  //   border: none;
+  //   background-color: transparent;
+
+  //   // Create parallelogram background for hover state
+  //   &::before {
+  //     content: '';
+  //     position: absolute;
+  //     inset: 0;
+  //     background-color: rgba(colors.$scrollbar-color, 0.1);
+  //     transform: skewX(-15deg);
+  //     transform-origin: bottom;
+  //     z-index: -1;
+  //   }
+  // }
 }
 
